# Fractal-Viewer-2

./: README.md
source/: CMakeLists.txt  compile.bat  main.cpp
source/fractals/: FractalDisplay.hpp  Fractals.hpp  functions.hpp  generate_fractal.hpp
source/fractals/shaders/: mandelbrot.frag  test.frag
source/ui/: IAUI.hpp  UIEvent.hpp  UIWidget.hpp  UIWindow.hpp
source/ui/geometry/: Geometry.hpp  Rect.hpp  Vector2.hpp
source/ui/widgets/: Canvas.hpp  Widgets.hpp
